# SearxGo-core

./: DEPS  package.json
.github/workflows/: 1-sync.yml  2-build.yml  build.yml
android/: BUILD.gn  brave_java_sources.gni
android/java/: apk_for_test.flags
android/java/menu/: brave_main_menu.xml
android/junit/: BUILD.gn
android/nala/: icons.gni
app/: BUILD.gn  actor_strings.grdp  brave_generated_resources.grd  brave_origin_strings.grd  brave_settings_strings.grdp  brave_strings.grd  brave_strings_override.grd  feature_defaults_unittest.cc  generated_resources.grd  generated_resources_override.grd  glic_strings.grdp  os_settings_strings.grdp  profiles_strings.grdp  settings_strings.grdp
browser/: BUILD.gn  about_flags.cc  brave_content_browser_client.cc  brave_local_state_prefs.cc  sources.gni
browser/ai_chat/: BUILD.gn
browser/android/youtube_script_injector/: youtube_script_injector_tab_helper.cc
browser/brave_origin/: brave_origin_service_factory.cc
browser/containers/: BUILD.gn  containers_browsertest.cc
browser/extensions/manifest_v2/: brave_extensions_manifest_v2_unittest.cc
browser/policy/: brave_simple_policy_map.h
browser/resources/history/: BUILD.gn  sources.gni
browser/resources/settings/: sources.gni
browser/ui/: BUILD.gn
browser/ui/sidebar/: BUILD.gn  sidebar_browsertest.cc  sidebar_controller.cc
browser/ui/tabs/: BUILD.gn
browser/ui/webui/history/: BUILD.gn  brave_history_embeddings_page_handler.cc  brave_history_ui.cc  brave_history_ui.h
chromium_src/extensions/browser/: manifest_v2_experiment_manager.cc  (+1 more)
components/: autofill_payments_strings.grdp  autofill_strings.grdp  contextual_cueing_strings.grdp  contextual_tasks_strings.grdp  personal_context_strings.grdp  smart_tab_sharing.grdp
components/brave_service_keys/: BUILD.gn
components/policy/: policy_templates.json
components/resources/: ai_chat_ui_strings.grdp
components/search_engines/: BUILD.gn  brave_prepopulated_engines.cc  brave_prepopulated_engines.h  brave_search_engines_pref_names.h  searxgo_provider.cc  searxgo_provider.h
components/tor/: onion_location_navigation_throttle.cc
docs/best-practices/: plaster.md
extensions/: BUILD.gn
patches/: DEPS.patch  base-BUILD.gn.patch  build-config-android-internal_rules.gni.patch  chrome-BUILD.gn.patch  chrome-android-BUILD.gn.patch  chrome-android-features-tab_ui-BUILD.gn.patch  chrome-android-java-src-org-chromium-chrome-browser-ChromeTabbedActivity.java.patch  chrome-android-java-src-org-chromium-chrome-browser-app-ChromeActivity.java.patch  chrome-android-java-src-org-chromium-chrome-browser-contextmenu-ChromeContextMenuItem.java.patch  chrome-android-java-src-org-chromium-chrome-browser-contextmenu-ChromeContextMenuPopulator.java.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-actor-site_policy.cc.patch  chrome-browser-browsing_data-chrome_browsing_data_remover_delegate.cc.patch  chrome-browser-component_updater-BUILD.gn.patch  chrome-browser-download-download_target_determiner.cc.patch  chrome-browser-extensions-BUILD.gn.patch  chrome-browser-extensions-api-developer_private-extension_info_generator.cc.patch  chrome-browser-extensions-api-identity-identity_get_auth_token_function.cc.patch  chrome-browser-lifetime-BUILD.gn.patch  chrome-browser-net-system_network_context_manager.cc.patch  chrome-browser-notifications-BUILD.gn.patch  chrome-browser-prefs-browser_prefs.cc.patch  chrome-browser-profiles-profile_avatar_icon_util.cc.patch  chrome-browser-profiles-profile_impl.cc.patch  chrome-browser-renderer_context_menu-render_view_context_menu.cc.patch  chrome-browser-resources-history-BUILD.gn.patch  chrome-browser-resources-settings-BUILD.gn.patch  chrome-browser-resources-settings-route.ts.patch  chrome-browser-resources-settings-router.ts.patch  chrome-browser-resources-settings-settings.ts.patch  chrome-browser-resources-settings-site_settings-constants.ts.patch  chrome-browser-resources-settings-site_settings-site_settings_util.ts.patch  chrome-browser-sessions-BUILD.gn.patch  chrome-browser-sessions-session_restore.cc.patch  chrome-browser-sessions-session_service.cc.patch  chrome-browser-sessions-session_service_base.cc.patch  chrome-browser-ui-BUILD.gn.patch  chrome-browser-ui-actions-chrome_action_id.h.patch  chrome-browser-ui-android-omnibox-java-res-layout-url_action_container.xml.patch  (+77 more)
patches/v8/: BUILD.gn.patch
test/: BUILD.gn
test/filters/: browser_tests.filter  content_unittests.filter  unit_tests.filter
tools/cr/: brockit.py
(+60 files in other folders)
