# Copyright 2024 The Chromium Authors / SearxGo Authors.
# Use of this source code is governed by a BSD-style license.

import("//build/config/features.gni")
import("//build/config/android/rules.gni")

source_set("search_engines") {
  sources = [
    "keyword_table.cc",
    "keyword_table.h",
    "search_engine_type.h",
    "search_engines_pref_names.h",
    "search_engines_switches.cc",
    "search_engines_switches.h",
    "search_host_to_urls_map.cc",
    "search_host_to_urls_map.h",
    "search_terms_data.cc",
    "search_terms_data.h",
    "template_url.cc",
    "template_url.h",
    "template_url_data.cc",
    "template_url_data.h",
    "template_url_data_util.cc",
    "template_url_data_util.h",
    "template_url_fetcher.cc",
    "template_url_fetcher.h",
    "template_url_prepopulate_data.cc",
    "template_url_prepopulate_data.h",
    "template_url_service.cc",
    "template_url_service.h",
    "template_url_service_client.h",
    "template_url_service_observer.h",
    # SearxGo custom provider
    "searxgo_provider.cc",
    "searxgo_provider.h",
  ]

  deps = [
    "//base",
    "//components/database_utils",
    "//components/google/core/common",
    "//components/infobars/core",
    "//components/keyed_service/core",
    "//components/omnibox/common",
    "//components/pref_registry",
    "//components/prefs",
    "//components/url_formatter",
    "//components/variations",
    "//components/webdata/common",
    "//net",
    "//sql",
    "//third_party/metrics_proto",
    "//ui/base",
    "//url",
  ]

  # Expõe a URL padrão do SearXNG via define de compilação
  # Sobrescreva nos gn args: searxgo_default_url = "https://search.example.com"
  if (defined(searxgo_default_url) && searxgo_default_url != "") {
    defines = [ "SEARXGO_DEFAULT_URL=\"${searxgo_default_url}\"" ]
  }
}
