# Copyright (c) 2026 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//brave/components/local_ai/buildflags/buildflags.gni")
import("//mojo/public/tools/bindings/mojom.gni")

assert(!is_android)

if (enable_local_ai) {
  mojom("mojom") {
    sources = [ "brave_history_embeddings.mojom" ]
    webui_module_path = "/"
  }

  source_set("history") {
    sources = [
      "brave_history_embeddings_page_handler.cc",
      "brave_history_embeddings_page_handler.h",
      "brave_history_ui.cc",
      "brave_history_ui.h",
    ]

    public_deps = [
      ":mojom",
      "//chrome/browser:browser_public_dependencies",
      "//chrome/browser/ui",
      "//content/public/browser",
      "//mojo/public/cpp/bindings",
      "//ui/webui/resources/cr_components/help_bubble:mojo_bindings",
    ]

    deps = [
      "//base",
      "//brave/components/local_ai/core",
      "//chrome/browser/profiles:profile",
      "//chrome/common:constants",
      "//components/prefs",
      "//content/public/common",
    ]
  }
} else {
  # Empty stub so callers (e.g. brave_chrome_browser_deps in
  # //brave/browser/sources.gni) can always reference this target without
  # tying themselves to enable_local_ai. History embeddings happens to be
  # the only consumer today, but the dep edge isn't conceptually local-AI.
  group("history") {
  }
}
